--- a/src/main/resources/templates/home/about.html
+++ b/src/main/resources/templates/home/about.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head th:replace="~{/layouts/header}">
-        <title>Home</title>
-    </head>
-    <body>
-        <header th:replace="~{/layouts/nav}">
-        </header>
-        <main class="container">
-            <h1>About Page</h1>
-        </main>
-        <div th:replace="~{/layouts/footer}">
-        </div>
-    </body>
-</html>
+<div th:replace="~{/layouts/template.html::view(~{::main}, 'About Page')}">
+    <main class="container">
+        <h1>About Page</h1>
+    </main>
+</div>
