--- a/src/main/resources/templates/layouts/nav.html
+++ b/src/main/resources/templates/layouts/nav.html
@@ -10,9 +10,9 @@
             </a>
             <ul
                 class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#"
+                <li><a th:text="#{menu.home}" href="#"
                         class="nav-link px-2 text-secondary">Home</a></li>
-                <li><a href="#"
+                <li><a th:text="#{menu.about}" href="#"
                         class="nav-link px-2 text-white"> Product </a></li>
                 <li><a href="#"
                         class="nav-link px-2 text-white">Pricing</a></li>
@@ -34,6 +34,10 @@
                     class="btn btn-outline-light me-2">Login</button>
                 <button type="button"
                     class="btn btn-warning">Sign-up</button>
+            </div>
+            <div class="text-end lang">
+                <a href="?lang=en"> EN </a> |
+                <a href="?lang=vi"> VI </a>
             </div>
         </div>
     </div>
