--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -1,7 +1,7 @@
-<head>
+<head th:fragment="head(title)">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title th:text="${title}">Document</title>
     <link rel="stylesheet" href="/bootstrap-5.3.3/dist/css/bootstrap.css">
     <script src="/bootstrap-5.3.3/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/index.css">
